--- a/index.html
+++ b/index.html
@@ -5,31 +5,26 @@
 <link rel="stylesheet" href="helpers.css">
 <link href="https://fonts.googleapis.com/css?family=Kadwa&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Amiko&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Raleway:300,700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<div class="bg-color-blue width-100">
-  <h1 class="text-left margin-auto margin-left-5">Joseph P Griffith</h1>
+<div class="bg-color-black width-100">
+  <h1 class="text-left margin-auto margin-left-10 margin-top-5">Joseph P Griffith</h1>
 </div>
 
 <div class="width-100 display-block">
-    <img class="img-responsive" src="images/flagstaff-hero.jpg" alt="An image of the peaks in Flagstaff AZ">
+  <!--<img class="img-responsive" src="images/flagstaff-hero.jpg" alt="An image of the peaks in Flagstaff AZ"> -->
     <nav>
-      <a href="">
-        <div class="display-inline-block padding-5">
-          <p class="all-caps underline text-center">About Me</p>
-        </div>
-      </a>
-      <a href="">
-        <div class="display-inline-block padding-5">
-          <p class="all-caps underline text-center">Resume</p>
-        </div>
-      </a>
-      <a href="">
-        <div class="display-inline-block padding-5">
-          <p class="all-caps underline text-center">Projects</p>
-        </div>
-      </a>
+      <div class="display-inline-block padding-5">
+        <p class="all-caps underline text-center hover-green">About Me</p>
+      </div>
+      <div id="resume" class="display-inline-block padding-5">
+        <p class="all-caps underline text-center hover-green">Resume</p>
+      </div>
+      <div class="display-inline-block padding-5">
+        <p class="all-caps underline text-center hover-green">Projects</p>
+      </div>
     </nav>
 
     <div id="content">
@@ -40,11 +35,16 @@
 
 </body>
 
-<script type="text/javascript">
-    $(document).ready(function (){
-      $("#btn").click(function(){
-        $("content").load();
-      });
-    });
-</script>
 </html>
+<script
+  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  crossorigin="anonymous"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    console.log("loaded");
+    $('#resume').on('click', function() {
+      console.log("clicked");
+    });
+  });
+</script>
