Add Visual Sort and Header

--- a/personal-site/public/index.html
+++ b/personal-site/public/index.html
@@ -3,7 +3,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- head content skipped -->
+    <meta charset="utf-8" />
+    <title>Griffith Web Development</title>
+    <meta name="Griffith Web Development"
+          content="This is my personal site, built to showcase my skills and experience. As well as provide a touch point for contact" />
+    <link rel="icon" href="./icon.png">
   </head>
   <body>
 
